--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,8 @@
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Libraries
-*.lib
-*.a
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+#############
+## Mine
+#############
+*.sublime-*
+node*/
+.gitattributes
+*.log
+/**/*.dmp
